[+]: adding user methods
