# src/backend/internal/router/ogen/oas_parameters_gen.go
@@ -1,0 +1,211 @@
+// Code generated by ogen, DO NOT EDIT.
+
+package api
+
+import (
+	"net/http"
+	"net/url"
+
+	"github.com/go-faster/errors"
+
+	"github.com/ogen-go/ogen/conv"
+	"github.com/ogen-go/ogen/middleware"
+	"github.com/ogen-go/ogen/ogenerrors"
+	"github.com/ogen-go/ogen/uri"
+	"github.com/ogen-go/ogen/validate"
+)
+
+// UserDeleteFeedbackParams is parameters of User_deleteFeedback operation.
+type UserDeleteFeedbackParams struct {
+	RacketID int
+}
+
+func unpackUserDeleteFeedbackParams(packed middleware.Parameters) (params UserDeleteFeedbackParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "racket_id",
+			In:   "path",
+		}
+		params.RacketID = packed[key].(int)
+	}
+	return params
+}
+
+func decodeUserDeleteFeedbackParams(args [1]string, argsEscaped bool, r *http.Request) (params UserDeleteFeedbackParams, _ error) {
+	// Decode path: racket_id.
+	if err := func() error {
+		param := args[0]
+		if argsEscaped {
+			unescaped, err := url.PathUnescape(args[0])
+			if err != nil {
+				return errors.Wrap(err, "unescape path")
+			}
+			param = unescaped
+		}
+		if len(param) > 0 {
+			d := uri.NewPathDecoder(uri.PathDecoderConfig{
+				Param:   "racket_id",
+				Value:   param,
+				Style:   uri.PathStyleSimple,
+				Explode: false,
+			})
+
+			if err := func() error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToInt(val)
+				if err != nil {
+					return err
+				}
+
+				params.RacketID = c
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return validate.ErrFieldRequired
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "racket_id",
+			In:   "path",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
+// UserDeleteRacketParams is parameters of User_deleteRacket operation.
+type UserDeleteRacketParams struct {
+	RacketID int
+}
+
+func unpackUserDeleteRacketParams(packed middleware.Parameters) (params UserDeleteRacketParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "racket_id",
+			In:   "path",
+		}
+		params.RacketID = packed[key].(int)
+	}
+	return params
+}
+
+func decodeUserDeleteRacketParams(args [1]string, argsEscaped bool, r *http.Request) (params UserDeleteRacketParams, _ error) {
+	// Decode path: racket_id.
+	if err := func() error {
+		param := args[0]
+		if argsEscaped {
+			unescaped, err := url.PathUnescape(args[0])
+			if err != nil {
+				return errors.Wrap(err, "unescape path")
+			}
+			param = unescaped
+		}
+		if len(param) > 0 {
+			d := uri.NewPathDecoder(uri.PathDecoderConfig{
+				Param:   "racket_id",
+				Value:   param,
+				Style:   uri.PathStyleSimple,
+				Explode: false,
+			})
+
+			if err := func() error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToInt(val)
+				if err != nil {
+					return err
+				}
+
+				params.RacketID = c
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return validate.ErrFieldRequired
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "racket_id",
+			In:   "path",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
+// UserUpdateRacketsCountParams is parameters of User_updateRacketsCount operation.
+type UserUpdateRacketsCountParams struct {
+	RacketID int
+}
+
+func unpackUserUpdateRacketsCountParams(packed middleware.Parameters) (params UserUpdateRacketsCountParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "racket_id",
+			In:   "path",
+		}
+		params.RacketID = packed[key].(int)
+	}
+	return params
+}
+
+func decodeUserUpdateRacketsCountParams(args [1]string, argsEscaped bool, r *http.Request) (params UserUpdateRacketsCountParams, _ error) {
+	// Decode path: racket_id.
+	if err := func() error {
+		param := args[0]
+		if argsEscaped {
+			unescaped, err := url.PathUnescape(args[0])
+			if err != nil {
+				return errors.Wrap(err, "unescape path")
+			}
+			param = unescaped
+		}
+		if len(param) > 0 {
+			d := uri.NewPathDecoder(uri.PathDecoderConfig{
+				Param:   "racket_id",
+				Value:   param,
+				Style:   uri.PathStyleSimple,
+				Explode: false,
+			})
+
+			if err := func() error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToInt(val)
+				if err != nil {
+					return err
+				}
+
+				params.RacketID = c
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return validate.ErrFieldRequired
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "racket_id",
+			In:   "path",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
